# UXH

./: .gitignore  .gitignore.REMOVED.git-id  CMakeLists.txt.REMOVED.git-id  LICENSE  LICENSE.REMOVED.git-id  README.md  README.md.REMOVED.git-id  Schrodinger_atom_1D.cpp.REMOVED.git-id  Schrodinger_atom_1D.hpp.REMOVED.git-id  XNLO-v1-1-0.REMOVED.git-id  XNLO_UPPE.sublime-project  XNLO_UPPE.sublime-workspace  XNLO_UPPE.sublime-workspace.REMOVED.git-id  config_file.txt.REMOVED.git-id  grid_tw.cpp.REMOVED.git-id  grid_tw.hpp.REMOVED.git-id  grid_xkx.cpp.REMOVED.git-id  grid_xkx.hpp.REMOVED.git-id  laser_pulse.cpp.REMOVED.git-id  laser_pulse.hpp.REMOVED.git-id  main.cpp.REMOVED.git-id  maths_textbook.cpp.REMOVED.git-id  maths_textbook.hpp.REMOVED.git-id  output_test.ipynb.REMOVED.git-id  output_test.ipynb.REMOVED.git-id.REMOVED.git-id  output_test.py.REMOVED.git-id  text.cpp.REMOVED.git-id  text.hpp.REMOVED.git-id
HHGP/: CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  R  README.md
HHGP/configFiles/: config.txt  config.txt.REMOVED.git-id  config_HHGP.txt
HHGP/eigen_3_3/: COPYING.MPL2.REMOVED.git-id
HHGP/input/: J0_zeros.bin.REMOVED.git-id
HHGP/lib/: HHGP.hpp  libHPPG-v1-0-0.a.REMOVED.git-id
HHGP/output/: 000_100_HHG_I.bin.REMOVED.git-id  000_100_HHG_R.bin.REMOVED.git-id  000_10_HHG_I.bin.REMOVED.git-id  000_10_HHG_R.bin.REMOVED.git-id  000_11_HHG_I.bin.REMOVED.git-id  000_11_HHG_R.bin.REMOVED.git-id  000_12_HHG_I.bin.REMOVED.git-id  000_12_HHG_R.bin.REMOVED.git-id  000_13_HHG_I.bin.REMOVED.git-id  000_13_HHG_R.bin.REMOVED.git-id  000_14_HHG_I.bin.REMOVED.git-id  000_14_HHG_R.bin.REMOVED.git-id  000_15_HHG_I.bin.REMOVED.git-id  000_15_HHG_R.bin.REMOVED.git-id  000_16_HHG_I.bin.REMOVED.git-id  000_16_HHG_R.bin.REMOVED.git-id  000_17_HHG_I.bin.REMOVED.git-id  000_17_HHG_R.bin.REMOVED.git-id  000_18_HHG_I.bin.REMOVED.git-id  000_18_HHG_R.bin.REMOVED.git-id  000_19_HHG_I.bin.REMOVED.git-id  000_19_HHG_R.bin.REMOVED.git-id  000_1_HHG_I.bin.REMOVED.git-id  000_1_HHG_R.bin.REMOVED.git-id  000_20_HHG_I.bin.REMOVED.git-id  000_20_HHG_R.bin.REMOVED.git-id  000_21_HHG_I.bin.REMOVED.git-id  000_21_HHG_R.bin.REMOVED.git-id  000_22_HHG_I.bin.REMOVED.git-id  000_22_HHG_R.bin.REMOVED.git-id  000_23_HHG_I.bin.REMOVED.git-id  000_23_HHG_R.bin.REMOVED.git-id  000_24_HHG_I.bin.REMOVED.git-id  000_24_HHG_R.bin.REMOVED.git-id  000_25_HHG_I.bin.REMOVED.git-id  000_25_HHG_R.bin.REMOVED.git-id  000_26_HHG_I.bin.REMOVED.git-id  000_26_HHG_R.bin.REMOVED.git-id  000_27_HHG_I.bin.REMOVED.git-id  000_27_HHG_R.bin.REMOVED.git-id  (+167 more)
HHGP/src/: DHT.cpp  DHT.hpp  DHT.hpp.REMOVED.git-id  HHGP.cpp  HHGP.cpp.REMOVED.git-id  HHGP.hpp  HH_source.cpp  HH_source.cpp.REMOVED.git-id  HH_source.hpp  IO.cpp  IO.cpp.REMOVED.git-id  IO.hpp  IO.hpp.REMOVED.git-id  _DHT.hpp  _IO.cpp  _IO.hpp  _grid_rkr.hpp  _grid_tw.cpp  _grid_tw.hpp  _keldysh_gas.hpp  _maths_textbook.cpp  _maths_textbook.hpp  _physics_textbook.cpp  _physics_textbook.hpp  config_settings.cpp  config_settings.hpp  grid_rkr.cpp  grid_rkr.hpp  grid_tw.cpp  grid_tw.cpp.REMOVED.git-id  grid_tw.hpp  keldysh_gas.cpp  keldysh_gas.hpp  keldysh_gas.hpp.REMOVED.git-id  main.cpp  main.cpp.REMOVED.git-id  maths_textbook.cpp  maths_textbook.cpp.REMOVED.git-id  maths_textbook.hpp  maths_textbook.hpp.REMOVED.git-id  (+8 more)
UPPE/: BatchJobTest.py.REMOVED.git-id  CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  FindMKL.cmake  GasPressureTest.ipynb.REMOVED.git-id  OutputTest.py.REMOVED.git-id  README.md  UPPE-v1-1-0.REMOVED.git-id  UPPEPostprocessing.py.REMOVED.git-id  UPPE_Figures.py.REMOVED.git-id  UPPE_Output.ipynb.REMOVED.git-id  UPPE_Output.ipynb.REMOVED.git-id.REMOVED.git-id  UPPE_Output.m.REMOVED.git-id  animaitons.py.REMOVED.git-id  config_file.txt.REMOVED.git-id  main.cpp.REMOVED.git-id  output_test.m.REMOVED.git-id  output_test.m~.REMOVED.git-id  output_test_paper.m.REMOVED.git-id
UPPE/.ipynb_checkpoints/: GasPressureTest-checkpoint.ipynb.REMOVED.git-id  UPPE_Output-checkpoint.ipynb.REMOVED.git-id  UPPE_Output-checkpoint.ipynb.REMOVED.git-id.REMOVED.git-id
UPPE/class_lib/: DHT.cpp.REMOVED.git-id  DHT.hpp.REMOVED.git-id  IO.cpp.REMOVED.git-id  IO.hpp.REMOVED.git-id  capillary_fibre.cpp.REMOVED.git-id  capillary_fibre.hpp.REMOVED.git-id  config_settings.cpp.REMOVED.git-id  config_settings.hpp.REMOVED.git-id  grid_rkr.cpp.REMOVED.git-id  grid_rkr.hpp.REMOVED.git-id  grid_tw.cpp.REMOVED.git-id  grid_tw.hpp.REMOVED.git-id  keldysh_gas.cpp.REMOVED.git-id  keldysh_gas.hpp.REMOVED.git-id  laser_pulse.cpp.REMOVED.git-id  laser_pulse.hpp.REMOVED.git-id  main.cpp.REMOVED.git-id  maths_textbook.cpp.REMOVED.git-id  maths_textbook.hpp.REMOVED.git-id  physics_textbook.cpp.REMOVED.git-id  physics_textbook.hpp.REMOVED.git-id  version.hpp.REMOVED.git-id
UPPE/configFiles/: config.txt  config.txt.REMOVED.git-id  config_HHGP.txt  config_HHGP_test.txt  config_UPPE.txt  config_XNLO.txt
UPPE/docs/: Doxyfile.REMOVED.git-id
UPPE/eigen_3_2/: .hg_archival.txt.REMOVED.git-id  .hgeol.REMOVED.git-id  .hgignore.REMOVED.git-id  .hgtags.REMOVED.git-id  CMakeLists.txt.REMOVED.git-id  COPYING.MINPACK.REMOVED.git-id  COPYING.README.REMOVED.git-id  CTestConfig.cmake.REMOVED.git-id  eigen3.pc.in.REMOVED.git-id
UPPE/eigen_3_3/: .hg_archival.txt.REMOVED.git-id  .hgeol.REMOVED.git-id  .hgignore.REMOVED.git-id  .hgtags.REMOVED.git-id  CMakeLists.txt.REMOVED.git-id  COPYING.BSD.REMOVED.git-id  COPYING.MINPACK.REMOVED.git-id  CTestConfig.cmake.REMOVED.git-id  CTestCustom.cmake.in.REMOVED.git-id  INSTALL.REMOVED.git-id  README.md.REMOVED.git-id  eigen3.pc.in.REMOVED.git-id  signature_of_eigen3_matrix_library.REMOVED.git-id
UPPE/lib/: notes.txt
UPPE/output/: 000_100_A_w_I.bin.REMOVED.git-id  000_100_A_w_I.bin.REMOVED.git-id.REMOVED.git-id  000_100_A_w_R.bin.REMOVED.git-id  000_100_A_w_R.bin.REMOVED.git-id.REMOVED.git-id  000_100_HHG_E.bin.REMOVED.git-id.REMOVED.git-id  000_100_HHG_I.bin.REMOVED.git-id.REMOVED.git-id  000_100_HHG_R.bin.REMOVED.git-id.REMOVED.git-id  000_100_electron_density.bin.REMOVED.git-id.REMOVED.git-id  000_10_A_w_I.bin.REMOVED.git-id  000_10_A_w_I.bin.REMOVED.git-id.REMOVED.git-id  (+3695 more)
(+14400 files in other folders)
